Remove kr/pretty

--- a/Readme
+++ b/Readme
@@ -1,9 +1,9 @@
 package pretty
 
-    import "github.com/kr/pretty"
+    import "github.com/variadico/pretty"
 
     Package pretty provides pretty-printing for Go values.
 
 Documentation
 
-    http://godoc.org/github.com/kr/pretty
+    http://godoc.org/github.com/variadico/pretty
